[package]
name = "mozpdb"
version = "0.2.7"
description = "Abandoned"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
license = "MIT OR Apache-2.0"
exclude = [
    "fixtures/*",
]

[dependencies]
fallible-iterator = "0.1.3"
scroll = { version = "0.9.0", features = ["derive"] }
uuid = "0.5.0"

[dev-dependencies]
# for examples/
getopts = "0.2"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release {{version}}"
no-dev-version = true
